--- a/index.html
+++ b/index.html
@@ -4,9 +4,131 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, inicial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <title>Portafolio de Romina Rotela</title>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:300,400,600,600i,700" rel="stylesheet">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/fontawesome.min.css">
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-
+        <header>
+            <div class="contenedor">
+                <nav class="menu">
+                    <a href="#">Acerca de</a>
+                    <a href="#">Trabajos</a>
+                    <a href="#">Contacto</a>
+                </nav>
+                <div class="contenedor-texto">
+                    <div class="texto">
+                        <h1 class="nombre">Romina Rotela</h1>
+                        <h2 class="profesion">Desarrolladora web</h2>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <section class="main">
+            <section class="acerca-de">
+                <div class="contenedor">
+                    <div class="foto">
+                        <img src="img/romina_rotela.jpg" width="115" alt="María Romina Rotela Ibarra">
+                    </div>
+                    <div class="texto">
+                        <h3 class="titulo">
+                            Acerca de
+                        </h3>
+                        <p>This is <span class="bold">Photoshops</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim iure explicabo in omnis deleniti eveniet tempora autem quae qui ad temporibus corporis, repellat nihil eum assumenda earum rem fuga doloremque.</p>
+                    </div>.
+                </div>
+            </section>
+            <section class="trabajos">
+                <div class="contenedor">
+                    <h3 class="titulo">
+                        Trabajos
+                    </h3>
+                    <div class="contenedor-trabajos">
+                        <div class="trabajo">
+                            <div class="thumb">
+                                <img src="img/trabajos.PNG" alt="www.portalmeta.org.py">
+                            </div>
+                            <div class="descripcion">
+                                <p class="nombre">Lorem Ipsum</p>
+                                <p class="categoria">HTML - CSS - JS</p>
+                            </div>
+                        </div>
+                        <div class="trabajo">
+                            <div class="thumb">
+                                <img src="img/trabajos.PNG" alt="www.portalmeta.org.py">
+                            </div>
+                            <div class="descripcion">
+                                <p class="nombre">Lorem Ipsum</p>
+                                <p class="categoria">HTML - CSS - JS</p>
+                            </div>
+                        </div>
+                        <div class="trabajo">
+                            <div class="thumb">
+                                <img src="img/trabajos.PNG" alt="www.portalmeta.org.py">
+                            </div>
+                            <div class="descripcion">
+                                <p class="nombre">Lorem Ipsum</p>
+                                <p class="categoria">HTML - CSS - JS</p>
+                            </div>
+                        </div>
+                        <div class="trabajo">
+                            <div class="thumb">
+                                <img src="img/trabajos.PNG" alt="www.portalmeta.org.py">
+                            </div>
+                            <div class="descripcion">
+                                <p class="nombre">Lorem Ipsum</p>
+                                <p class="categoria">HTML - CSS - JS</p>
+                            </div>
+                        </div>
+                        <div class="trabajo">
+                            <div class="thumb">
+                                <img src="img/trabajos.PNG" alt="www.portalmeta.org.py">
+                            </div>
+                            <div class="descripcion">
+                                <p class="nombre">Lorem Ipsum</p>
+                                <p class="categoria">HTML - CSS - JS</p>
+                            </div>
+                        </div>
+                        <div class="trabajo">
+                            <div class="thumb">
+                                <img src="img/trabajos.PNG" alt="www.portalmeta.org.py">
+                            </div>
+                            <div class="descripcion">
+                                <p class="nombre">Lorem Ipsum</p>
+                                <p class="categoria">HTML - CSS - JS</p>
+                            </div>
+                        </div>
+                        <div class="trabajo">
+                            <div class="thumb">
+                                <img src="img/trabajos.PNG" alt="www.portalmeta.org.py">
+                            </div>
+                            <div class="descripcion">
+                                <p class="nombre">Lorem Ipsum</p>
+                                <p class="categoria">HTML - CSS - JS</p>
+                            </div>
+                        </div>
+                        <div class="trabajo">
+                            <div class="thumb">
+                                <img src="img/trabajos.PNG" alt="www.portalmeta.org.py">
+                            </div>
+                            <div class="descripcion">
+                                <p class="nombre">Lorem Ipsum</p>
+                                <p class="categoria">HTML - CSS - JS</p>
+                            </div>
+                        </div>
+                        <div class="trabajo">
+                            <div class="thumb">
+                                <img src="img/trabajos.PNG" alt="www.portalmeta.org.py">
+                            </div>
+                            <div class="descripcion">
+                                <p class="nombre">Lorem Ipsum</p>
+                                <p class="categoria">HTML - CSS - JS</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </section>
     </body>
 </html>
