--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <section class="acerca-de">
                 <div class="contenedor">
                     <div class="foto">
-                        <img src="img/romina_rotela.jpg" width="115" alt="María Romina Rotela Ibarra">
+                        <img src="img/romina_rotela_cuadrado.jpg" width="170" alt="María Romina Rotela Ibarra">
                     </div>
                     <div class="texto">
                         <h3 class="titulo">
