--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <header>
             <div class="contenedor">
                 <nav class="menu">
-                    <a href="#">Acerca de</a>
-                    <a href="#">Trabajos</a>
-                    <a href="#">Contacto</a>
+                    <a href="#acerca-de">Acerca de</a>
+                    <a href="#trabajos">Trabajos</a>
+                    <a href="#contacto">Contacto</a>
                 </nav>
                 <div class="contenedor-texto">
                     <div class="texto">
@@ -28,7 +28,7 @@
             </div>
         </header>
         <section class="main">
-            <section class="acerca-de">
+            <section class="acerca-de" id="acerca-de">
                 <div class="contenedor">
                     <div class="foto">
                         <img src="img/romina_rotela_cuadrado.jpg" width="170" alt="María Romina Rotela Ibarra">
@@ -41,7 +41,7 @@
                     </div>.
                 </div>
             </section>
-            <section class="trabajos">
+            <section class="trabajos" id="trabajos">
                 <div class="contenedor">
                     <h3 class="titulo">
                         Trabajos
@@ -124,7 +124,7 @@
             </section>
         </section>
         <footer>
-            <section class="contacto">
+            <section class="contacto" id="contacto">
                 <div class="contenedor">
                     <h3 class="titulo">Contacto</h3>
                     <form class="formulario" action="">
